added description and updated close/order
